  which would also allow the same website to capture video on a future visit.
  Now every prompt will set the appropriate setting, though existing
  `content.media_capture` settings in `autoconfig.yml` will be migrated to set
  all three settings. To review/change previously granted permissions, use
  `:config-diff` and e.g.
  `:config-unset -u example.org content.media.video_capture`.

Added
~~~~~

- New replacement `{aligned_index}` for `tabs.title.format` and `format_pinned`
  which behaves like `{index}`, but space-pads the index based on the total
  numbers of tabs. This can be used to get aligned tab texts with vertical
  tabs.
- New command `:devtools-focus` (bound to `wIf`) to toggle keyboard focus
  between the devtools and web page.

Fixed
~~~~~

- A URL pattern with a `*.` host was considered valid and matched all hosts.
  Due to keybindings like `tsH` toggling scripts for `*://*.{url:host}/*`,
  invoking them on pages without a host (e.g. `about:blank`) could result in
  accidentally allowing/blocking JavaScript for all pages. Such patterns are
  now considered invalid, with existing patterns being automatically removed
  from `autoconfig.yml`.
- When `scrolling.bar` was set to `overlay` (the default), qutebrowser would
  internally override any `enable-features=...` flags passed via `qt.args` or
  `--qt-flag`. It now correctly combines existing `enable-feature` flags with
  internal ones.
- Elements with an inherited "contenteditable" attribute now trigger insert
  mode and get hints assigned correctly.
- When checkmarks, radio buttons and some other elements are styled via the
  Bootstrap CSS framework, they now get hints correctly.
- When the session file isn't writable when qutebrowser is quit, an error is
  now logged instead of crashing.

v1.13.1 (2020-07-17)
--------------------

Fixed
~~~~~

- With Qt 5.14, shared workers are now disabled. This works around a crash in
  QtWebEngine on certain sites (like the Epic Games Store or the Unreal Engine