@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Input with delayed load</title>
+    </head>
+    <body>
+        <input id="qute-input" type="text" value=""/>
+        <img src="/delayed-image">
+    </body>
+</html>
